# ca-embeds

./: .example.env  .gitignore  README.md  pyproject.toml
ca-embeds/: archive_embedex.py  image.py  user_embedex.py  volume.py
